# vehicle-model-generator

./: .gitattributes  .gitignore  .licensechecker.yml  .ort.yaml  .ort.yml  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  NOTICE-3RD-PARTY-CONTENT.md  NOTICE.md  README.md  cpp_generator.py  gen_vehicle_model.py  license_header.txt  pyproject.toml  python_generator.py  requirements-dev.txt  requirements-vss.txt  requirements.txt  setup.cfg  setup.py  utils.py  vss_collection.py
.devcontainer/: Dockerfile  Dockerfile.Proxy  devcontainer.json
.devcontainer/scripts/: add-python.sh  configure-proxies.sh  container-set.sh  postCreateCommand.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/actions/pre-commit-action/: action.yml
.github/workflows/: check-licenses.yml  check-notice-file.yml  ci.yml  release.yml  update-notice-file.yml
cpp/: cpp_generator.py
python/: __init__.py  constants.py  file_formats.py  file_import.py  python_generator.py  vss_collection.py
sdv/model_generator/: main.py  utils.py
sdv/model_generator/cpp/: cpp_generator.py  cpp_keywords.py
sdv/model_generator/python/: python_generator.py  vss_collection.py
sdv/model_generator/tree_generator/: __init__.py  constants.py  file_formats.py  file_import.py
src/velocitas/model_generator/: __init__.py  cli.py  utils.py
src/velocitas/model_generator/cpp/: cpp_generator.py  cpp_keywords.py
tests/: __init__.py  conftest.py  requirements.txt  test_model_generator.py
tests/data/: units.yaml
tests/data/json/: units.yaml  vss_rel_3.0.json  vss_rel_4.0.json
(+5 files in other folders)
