[metadata]
name = velocitas_model_generator
version = 0.1.0
description = Generates a language-specific data model out of VSS vspec files
url = https://github.com/eclipse-velocitas/vehicle-model-velocitas
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.9, <4
install_requires = 
    vss-tools @ git+https://github.com/covesa/vss-tools@v3.0

[options.entry_points]
console_scripts =
    gen-model = sdv.model_generator.main:main

[flake8]
max-line-length = 89
max-complexity = 18
select = B,C,E,F,W,T4,B9,B950
ignore = W503, B903, E402, F541, B028, B907

[mypy]
python_version = 3.9
warn_unused_configs = True
warn_redundant_casts = True
show_error_codes = True
check_untyped_defs = True
install_types = False
non_interactive = False
namespace_packages = True
exclude = sdv_model/*
files =
    ./*.py

[mypy-vehicle_model.proto.*]
ignore_errors = True

[pydocstyle]
match = '(?!test_).*\.py'

[isort]
profile = black

[tool.bandit]
skips = ["B101"]
